correct naming for package

--- a/example/meteor/package.json
+++ b/example/meteor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Meteor Project Docs",
+  "name": "meteor-project-jsdocs",
   "private": true,
   "scripts": {
     "start": "meteor run"
