--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.4",
   "description": "Automated JSDoc generation for Meteor projects with a Meteor server to output the docs.",
   "dependencies": {
-    "ejs": "2.4.x",
+    "canonical-json": "0.0.x",
     "cjson": "0.4.x",
     "colors": "1.1.x",
-    "jsdoc": "jsdoc3/jsdoc",
-    "canonical-json": "0.0.x",
-    "lodash": "4.6.x",
-    "fs-extra": "0.26.x"
+    "ejs": "2.4.x",
+    "fs-extra": "0.26.x",
+    "jsdoc": "git+https://github.com/jsdoc3/jsdoc.git",
+    "lodash": "4.6.x"
   },
   "engines": {
     "node": ">=5.5"
